--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # = Data Source
-spring.datasource.url = jdbc:mysql://database-1.cy284csxxuss.us-east-1.rds.amazonaws.com:3306/login?useSSL=true&useTimezone=true&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/login?useSSL=true&useTimezone=true&serverTimezone=UTC
 spring.datasource.username = admin
-spring.datasource.password = adminadmin
+spring.datasource.password = admin
 
 # = Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -9,8 +9,6 @@ spring.datasource.validationQuery = SELECT 1
 
 # = Show or not log for each sql query
 spring.jpa.show-sql = true
-
-spring.jpa.hibernate.ddl-auto=create
 
 
 # = The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -21,7 +19,3 @@ spring.datasource.initialization-mode=always
 
 logging.level.org.springframework.security=DEBUG
 server.error.whitelabel.enabled=false
-
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jackson.default-property-inclusion=non-null
